[package]
name = "keystroke_server"
version = "0.1.0"
edition = "2021"

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
message-io = "0.14.6"
serde = "1.0.158"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"